implement default module loader