@@ -11,6 +11,7 @@ import org.yaml.snakeyaml.Yaml;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -18,6 +19,7 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.stream.Collectors;
 
 public class DefaultModuleLoader implements ModuleManager {
     private static final Logger logger = LoggerFactory.getLogger(DefaultModuleLoader.class);
@@ -41,6 +43,47 @@ public class DefaultModuleLoader implements ModuleManager {
     public int loadModules() {
         logger.info("Loading modules from directory: {}", this.modulesDirectory);
         int loadedModules = 0;
+
+        try {
+            List<Path> moduleJars = Files.list(this.modulesDirectory)
+                    .filter(path -> path.toString().toLowerCase().endsWith(".jar"))
+                    .toList();
+
+            Map<String, ModuleDescriptor> descriptors = new HashMap<>();
+            Map<String, Path> jarPaths = new HashMap<>();
+
+            for (Path jarPath : moduleJars) {
+                try {
+                    ModuleDescriptor descriptor = loadModuleDescriptor(jarPath);
+                    if (descriptor != null) {
+                        descriptors.put(descriptor.id(), descriptor);
+                        jarPaths.put(descriptor.id(), jarPath);
+                        logger.debug("Loaded module descriptor for module: {}", descriptor.id());
+                    }
+                } catch (ModuleException e) {
+                    logger.error("Failed to load module descriptor from JAR: {}", jarPath.getFileName(), e);
+                }
+            }
+
+            List<String> loadOrder = calculateLoadOrder(descriptors);
+
+            for (String moduleId : loadOrder) {
+                try {
+                    Path jarPath = jarPaths.get(moduleId);
+                    ModuleDescriptor descriptor = descriptors.get(moduleId);
+
+                    loadModule(descriptor, jarPath);
+                    loadedModules++;
+                } catch (ModuleException e) {
+                    logger.error("Failed to load module {}: {}", moduleId, e.getMessage());
+                }
+            }
+        } catch (IOException e) {
+            logger.error("Failed to list modules in directory: {}", this.modulesDirectory, e);
+        } catch (ModuleException e) {
+            logger.error("Failed to calculate load order for modules", e);
+        }
+
         return loadedModules;
     }
 
@@ -122,54 +165,243 @@ public class DefaultModuleLoader implements ModuleManager {
         return true;
     }
 
+    protected void loadModule(ModuleDescriptor descriptor, Path jarPath) throws ModuleException {
+        logger.info("Loading module: {} v{}",
+                descriptor.name(), descriptor.version());
+
+        if (this.modulesById.containsKey(descriptor.id())) {
+            throw new ModuleException("Module already loaded: " + descriptor.id());
+        }
+
+        URLClassLoader urlClassLoader = null;
+
+        try {
+            urlClassLoader = new URLClassLoader(
+                    new URL[] { jarPath.toUri().toURL() },
+                    getClass().getClassLoader()
+            );
+
+            Class<?> mainClass = urlClassLoader.loadClass(descriptor.main());
+            if (!Module.class.isAssignableFrom(mainClass)) {
+                throw new ModuleException("Main class does not implement Module interface: " + descriptor.main());
+            }
+
+            @SuppressWarnings("unchecked")
+            Class<? extends Module> moduleClass = (Class<? extends Module>) mainClass;
+
+            Module module = moduleClass.getDeclaredConstructor().newInstance();
+
+            module.onLoad(/*jda, descriptor*/);
+
+            ModuleInfo moduleInfo = new ModuleInfo(descriptor, jarPath, module, urlClassLoader);
+            modulesById.put(descriptor.id(), moduleInfo);
+
+            logger.info("Successfully loaded module: {}", descriptor.name());
+        } catch (ReflectiveOperationException e) {
+            closeClassLoader(urlClassLoader);
+            throw new ModuleException("Failed to load module class: " + descriptor.main(), e);
+        } catch (IOException e) {
+            throw new ModuleException("Failed to create ClassLoader for module: " + descriptor.id(), e);
+        }
+    }
+
+    private void closeClassLoader(URLClassLoader classLoader) {
+        if (classLoader != null) {
+            try {
+                classLoader.close();
+            } catch (IOException e) {
+                logger.error("Failed to close ClassLoader", e);
+            }
+        }
+    }
     @Override
     public int enableModules() {
-        return 0;
+        int enabledModules = 0;
+        for (String moduleId : this.modulesById.keySet()) {
+            if (enableModule(moduleId)) {
+                enabledModules++;
+            }
+        }
+        return enabledModules;
     }
 
     @Override
     public int disableModules() {
-        return 0;
+        int disabledModules = 0;
+        for (String moduleId : this.modulesById.keySet()) {
+            if (disableModule(moduleId)) {
+                disabledModules++;
+            }
+        }
+        return disabledModules;
     }
 
     @Override
     public boolean enableModule(String moduleId) {
-        return false;
+        ModuleInfo info = this.modulesById.get(moduleId);
+
+        if (info == null) {
+            logger.warn("Cannot enable unknown module: {}", moduleId);
+            return false;
+        }
+
+        if (info.module().isEnabled()) {
+            logger.debug("Module {} is already enabled", moduleId);
+            return false;
+        }
+
+        try {
+            for (String dependencyId : info.descriptor().dependencies()) {
+                ModuleInfo dependencyInfo = this.modulesById.get(dependencyId);
+
+                if (dependencyInfo != null && !dependencyInfo.module().isEnabled()) {
+                    logger.info("Enabling dependency {} for module {}", dependencyId, moduleId);
+                    enableModule(dependencyId);
+                }
+            }
+
+            logger.info("Enabling module: {}", info.descriptor().name());
+            info.module().onEnable();
+            logger.info("Module {} enabled successfully", info.descriptor().name());
+            return true;
+        } catch (Exception e) {
+            logger.error("Failed to enable module {}: {}", moduleId, e.getMessage(), e);
+            return false;
+        }
     }
 
     @Override
     public boolean disableModule(String moduleId) {
-        return false;
+        ModuleInfo info = this.modulesById.get(moduleId);
+
+        if (info == null) {
+            logger.warn("Cannot disable unknown module: {}", moduleId);
+            return false;
+        }
+
+        if (!info.module().isEnabled()) {
+            logger.debug("Module {} is already disabled", moduleId);
+            return false;
+        }
+
+        List<String> dependentModules = findDependentModules(moduleId);
+        if (!dependentModules.isEmpty()) {
+            logger.info("Module {} is required by: {}", moduleId, dependentModules);
+
+            for (String dependentId : dependentModules) {
+                disableModule(dependentId);
+            }
+        }
+
+        try {
+            logger.info("Disabling module: {}", info.descriptor().name());
+            info.module().onDisable();
+            logger.info("Module {} disabled successfully", info.descriptor().name());
+            return true;
+        } catch (Exception e) {
+            logger.error("Failed to disable module {}: {}", moduleId, e.getMessage(), e);
+            return false;
+        }
+    }
+
+    private List<String> findDependentModules(String moduleId) {
+        List<String> dependents = new ArrayList<>();
+
+        for (Map.Entry<String, ModuleInfo> entry : this.modulesById.entrySet()) {
+            if (entry.getValue().descriptor().dependencies().contains(moduleId)) {
+                dependents.add(entry.getKey());
+            }
+        }
+
+        return dependents;
     }
 
     @Override
     public boolean reloadModule(String moduleId) {
-        return false;
+        ModuleInfo info = this.modulesById.get(moduleId);
+
+        if (info == null) {
+            logger.warn("Cannot reload unknown module: {}", moduleId);
+            return false;
+        }
+
+        boolean wasEnabled = info.module().isEnabled();
+
+        // Désactiver le module
+        if (wasEnabled && !disableModule(moduleId)) {
+            logger.error("Failed to disable module {} during reload", moduleId);
+            return false;
+        }
+
+        // Sauvegarder les informations importantes
+        Path jarPath = info.jarPath();
+        ModuleDescriptor descriptor = info.descriptor();
+
+        // Déclencher l'événement onUnload
+        try {
+            info.module().onUnload();
+        } catch (Exception e) {
+            logger.error("Error during module unload: {}", moduleId, e);
+        }
+
+        // Fermer le ClassLoader
+        try {
+            info.classLoader().close();
+        } catch (IOException e) {
+            logger.error("Failed to close ClassLoader for module {}", moduleId, e);
+        }
+
+        // Supprimer le module de la liste
+        this.modulesById.remove(moduleId);
+
+        try {
+            // Recharger le module
+            loadModule(descriptor, jarPath);
+
+            // Réactiver le module si nécessaire
+            if (wasEnabled) {
+                return enableModule(moduleId);
+            }
+
+            return true;
+        } catch (ModuleException e) {
+            logger.error("Failed to reload module {}: {}", moduleId, e.getMessage(), e);
+            return false;
+        }
     }
 
     @Override
     public Module getModule(String moduleId) {
-        return null;
+        ModuleInfo info = this.modulesById.get(moduleId);
+        return info != null ? info.module() : null;
     }
 
     @Override
     public Collection<Module> getModules() {
-        return List.of();
+        return this.modulesById.values().stream()
+                .map(ModuleInfo::module)
+                .collect(Collectors.toList());
     }
 
     @Override
     public Collection<Module> getEnabledModules() {
-        return List.of();
+        return this.modulesById.values().stream()
+                .map(ModuleInfo::module)
+                .filter(Module::isEnabled)
+                .collect(Collectors.toList());
     }
 
     @Override
     public boolean isModuleLoaded(String moduleId) {
-        return false;
+        return this.modulesById.containsKey(moduleId);
     }
 
     @Override
     public List<String> getModuleDependencies(String moduleId) {
-        return List.of();
+        ModuleInfo info = this.modulesById.get(moduleId);
+        return info != null ?
+                new ArrayList<>(info.descriptor().dependencies()) :
+                Collections.emptyList();
     }
 
 
